--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "vue-forms-kit",
-    "version": "0.1.3",
+    "version": "0.1.4",
+    "main": "src/index.js",
     "author": {
         "email": "alex.oleshkevich@gmail.com",
         "name": "Alex Oleshkevich",
